feat: add question delete function
