# internal/app/schema/exam_schema.go
@@ -1,0 +1,6 @@
+package schema
+
+type AddExam struct {
+	Name    string   `json:"name"`
+	Student []string `json:"student"`
+}
